Add a whole new tested sample app which I can now modify to make use of the techniques Josh Long describes for integrating JavaFX properly with SpringBoot.

--- a/org.msscf.sts4training/pom.xml
+++ b/org.msscf.sts4training/pom.xml
@@ -10,5 +10,6 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>org.msscf.sts4training.config</module>
+		<module>org.msscf.sts4training.javafx</module>
 	</modules>
 </project>
