--- a/org.msscf.sts4training/org.msscf.sts4training.config/pom.xml
+++ b/org.msscf.sts4training/org.msscf.sts4training.config/pom.xml
@@ -15,9 +15,9 @@
 	<description>Configuration objects used by all subsequent training projects</description>
 
 	<properties>
-		<java.version>14</java.version>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+		<java.version>15</java.version>
+        <maven.compiler.source>15</maven.compiler.source>
+        <maven.compiler.target>15</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -56,7 +56,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
-			<optional>true</optional>
+			<optional>false</optional>
 		</dependency>
 	</dependencies>
 
