Ok, so I just brought the code foreward from my internal project; I didn't really write all that today. *LOL*

--- a/org.msscf.sts4training/pom.xml
+++ b/org.msscf.sts4training/pom.xml
@@ -11,5 +11,6 @@
 	<modules>
 		<module>org.msscf.sts4training.config</module>
 		<module>org.msscf.sts4training.javafx</module>
+		<module>org.msscf.sts4training.cfbmr</module>
 	</modules>
 </project>
