Create the new webdocsrv sub-project.  See the apprpriate sub-page in the project docs directory.

--- a/org.msscf.sts4training/pom.xml
+++ b/org.msscf.sts4training/pom.xml
@@ -12,5 +12,6 @@
 		<module>org.msscf.sts4training.config</module>
 		<module>org.msscf.sts4training.javafx</module>
 		<module>org.msscf.sts4training.cfbmr</module>
+		<module>org.msscf.sts4training.webdocsrv</module>
 	</modules>
 </project>
